--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
+.footer {
+  width: 100%;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer p {
+  color: #4d5b9e;
+  font-weight: bold;
+  font-size: 1.7rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.restart {
+  background-color: #4d5b9e;
+  border: none;
+  width: 15%;
+  height: 50px;
+  font-size: 1.1rem;
+  color: white;
+  border-radius: 10px;
+  font-weight: 700;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.qa-main {
+  padding: 3rem 5rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.yellow-circle {
+  box-sizing: border-box;
+  background-color: #fffad1;
+  height: 40vw;
+  width: 35vh;
+  border-radius: 40%;
+  transform: rotate(240deg);
+  position: fixed;
+  top: -200px;
+  right: -200px;
+  z-index: -12;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blue-circle {
+  box-sizing: border-box;
+  background-color: #deebf8;
+  height: 40vw;
+  width: 35vh;
+  border-radius: 50%;
+  transform: rotate(240deg);
+  position: fixed;
+  bottom: -200px;
+  left: -300px;
+  z-index: -12;
 }
